--- a/test_style.css
+++ b/test_style.css
@@ -41,3 +41,34 @@ body
 	width: 100%;
 	max-width: 1200px;
 }
+
+header 
+{
+    display: flex;
+    flex-direction: row;
+	justify-content: space-between;
+}
+
+nav 
+{
+	display: flex;
+	align-items: center;
+}
+
+nav a 
+{
+	text-decoration: none;
+	color: black;
+}
+
+nav ul 
+{
+	display: flex;
+}
+
+nav li 
+{
+	display: flex;
+	list-style: none;
+	padding-left: 30px;
+}
